--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "aws-cdk-lib": "^2.8.0",
     "cdk": "^2.146.0",
     "constructs": "^10.0.0",
-    "source-map-support": "^0.5.16"
+    "source-map-support": "^0.5.16",
+    "tsc": "^2.0.4"
   }
 }
