--- a/package.json
+++ b/package.json
@@ -22,9 +22,7 @@
   },
   "dependencies": {
     "aws-cdk-lib": "^2.8.0",
-    "cdk": "^2.146.0",
     "constructs": "^10.0.0",
-    "source-map-support": "^0.5.16",
-    "tsc": "^2.0.4"
+    "source-map-support": "^0.5.16"
   }
 }
